--- a/src/styles.css
+++ b/src/styles.css
@@ -1,23 +1,40 @@
 body {
     background-color: lightblue;
     font-family: 'Monaco';
-    min-height: 100vh;
-    max-width: 400px;
     margin: 0;
 }
 
-.content {
-    width: 100dvh;
+.root {
+    width: 100vw;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
-img {
-    width: 1000;
-    height: 400
+.headerBar {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 8px;
+    padding: 8px
+}
+
+.contentContainer {
+    background-color: purple;
+    display: flex;
+    position: relative;
+    flex-grow: 1;
+}
+
+.homePage {
+    background-color: red;
+    height: 100%;
+    width: 100%;
 }
 
 .bgImg {
-    margin: 10;
-    max-width: 100%;
-    height: 100vh; 
+    /* width: 100%;
+    height: 100%;  */
+    background-color: green;
+    object-fit: cover;
 }
