--- a/src/styles.css
+++ b/src/styles.css
@@ -94,6 +94,8 @@ h2, h4 {
 
 ul {
     margin: 0;
+    list-style-type: none;
+    padding: none;
 }
 .headerText {
     font-size: 50px;
@@ -105,4 +107,22 @@ ul {
 
 .subText2 {
     font-size: 15px;
+}
+
+ul {
+    font-weight: normal;
+    font-size: 15px;
+    color: black;
+}
+
+ li > p {
+    font-weight: normal;
+    font-size: 12px;
+    color: gray;
+}
+
+.itemPrice {
+    font-size: 12px;
+    color: black;
+    font-weight: 700;;
 }
