--- a/src/styles.css
+++ b/src/styles.css
@@ -78,12 +78,26 @@ button:hover{
     align-items: center;
 }
 
-.menuBody {
-    /* width: 100%;
-    height: 100%; */
-    background-color: lightblue;
 
+.menuBody {
+    background-color: lightblue;
+    column-gap: 1rem;
+    column-count: 2;
+    column-width: 25rem;
+    padding: 3.5rem;
 }
+
+.menuSection {
+    background-color: lightgreen;
+    margin: 0;
+    margin-bottom: 10px;
+    break-inside: avoid;
+    /* display: flex;
+    flex-direction: column;     */
+}
+
+
+
 p {
     margin: 0;    
 }
