--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 body {
     background-color: lightblue;
-    font-family: 'Helvetica';
+    font-family: 'Papyrus';
     margin: 0;
 }
 
@@ -11,6 +11,7 @@ button {
     margin: 6px 6px;
     border-radius: 10px;
     border: none;
+    font-family: 'Papyrus';
 }
 
 button:hover{
@@ -34,10 +35,11 @@ button:hover{
 }
 
 .contentContainer {
-    background-color: purple;
+    background-color: gray;
     display: flex;
     position: relative;
     flex-grow: 1;
+    justify-content: center;
 }
 
 .homePage {
@@ -61,39 +63,37 @@ button:hover{
     width: 100%;
     height: 100%;
     background-color: lightgray;
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; */
-
-}
-
-.menuHeader {
-    /* width: 100%;
-    height: 100%; */
-    background-color: gray;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding: 2rem  3.5rem  2rem  3.5rem  ;
+    max-width: 55rem;
+}
+
+.menuHeader {
+    /* margin-top: 5rem; */
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
     align-items: center;
+    margin-bottom: 20px;
 }
 
 
 .menuBody {
-    background-color: lightblue;
-    column-gap: 1rem;
+    /* background-color: lightblue; */
+    column-gap: 2rem;
     column-count: 2;
-    column-width: 25rem;
-    padding: 3.5rem;
+    column-width:    min(25rem);
+    /* padding: 2rem  3.5rem  2rem  3.5rem  ; */
 }
 
 .menuSection {
-    background-color: lightgreen;
+    /* background-color: lightgreen; */
     margin: 0;
     margin-bottom: 10px;
     break-inside: avoid;
-    /* display: flex;
-    flex-direction: column;     */
+    /* width: 25rem; */
 }
 
 
@@ -106,11 +106,8 @@ h2, h4 {
     margin: 0;
 }
 
-ul {
-    margin: 0;
-    list-style-type: none;
-    padding: none;
-}
+
+
 .headerText {
     font-size: 50px;
 }
@@ -123,13 +120,29 @@ ul {
     font-size: 15px;
 }
 
+.menuSectionHeader {
+    padding-top: 10px;
+    padding-bottom: 3px;
+    margin-bottom: 10px;
+    border-bottom: 2px solid black;
+}
+
 ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    padding: none;
     font-weight: normal;
     font-size: 15px;
     color: black;
+
 }
 
- li > p {
+li {
+    margin-bottom: 8px;
+}
+
+li > p {
     font-weight: normal;
     font-size: 12px;
     color: gray;
