--- a/src/styles.css
+++ b/src/styles.css
@@ -66,11 +66,23 @@ button:hover{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 2rem  3.5rem  2rem  3.5rem  ;
+    padding: 1rem 2rem  1rem 2rem  ;
     max-width: 55rem;
 }
 
-.menuHeader {
+.contactPage {
+    width: 100%;
+    height: 100%;
+    background-color: lightgray;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 2rem 2rem  2rem 2rem  ;
+    max-width: 44rem;
+}
+
+.header {
     /* margin-top: 5rem; */
     display: flex;
     flex-direction: column;
@@ -80,7 +92,7 @@ button:hover{
 }
 
 
-.menuBody {
+.menuPage > .body {
     /* background-color: lightblue; */
     column-gap: 2rem;
     column-count: 2;
@@ -96,7 +108,24 @@ button:hover{
     /* width: 25rem; */
 }
 
+.contactPage > .body {
+    /* background-color: aqua; */
+    column-gap: 2rem;
+    column-count: 2;
+    column-width: min(20rem);
+}
 
+a{
+    color: black;
+    text-decoration: underline 0.5px;
+}
+
+a:hover {
+    color: darkblue;
+}
+.address {
+    padding-bottom: 10px;
+}
 
 p {
     margin: 0;    
@@ -108,19 +137,19 @@ h2, h4 {
 
 
 
-.headerText {
+.header1 {
     font-size: 50px;
 }
 
-.subText {
-    font-size: 25px;
+.header2 {
+    font-size: 30px;
 }
 
-.subText2 {
-    font-size: 15px;
+.header3 {
+    font-size: 20px;
 }
 
-.menuSectionHeader {
+.menuSectionHeader{
     padding-top: 10px;
     padding-bottom: 3px;
     margin-bottom: 10px;
