--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,8 @@
-body {
+html, body {
     background-color: green;
     font-family: 'Papyrus';
     margin: 0;
+    height: 100%;
 }
 
 button {
@@ -21,11 +22,15 @@ button:hover{
 }
 
 .root {
-    width: 100vw;
-    height: 100vh;
+    /* width: 100vw;
+    height: 100vh; */
     display: flex;
     flex-direction: column;
+
+    height: 100%;
 }
+
+
 
 .headerBar {
     display: flex;
@@ -33,17 +38,50 @@ button:hover{
     justify-content: center;
     gap: 8px;
     padding: 8px;
+    align-items: flex-start;
+    flex-shrink: 0;
 }
 
 .contentContainer {
     background-color: purple;
     display: flex;
-    position: relative;
-    flex-grow: 1;
+    /* position: relative;
+    flex-grow: 1; */
     justify-content: center;
 
+    /* flex: 1;
+    overflow: auto; */
+    /* height: 100%; */
 
+    /* margin: 0;
+    height: 100%; */
+    /* flex: 1; */
+    overflow: hidden;
 }
+
+.wrapper {
+    overflow:scroll;
+    height: 100%;
+    background-color: pink;
+    width: 100%;
+
+    margin-left: auto;
+    margin-right: auto;
+    /* position: relative; */
+    /* display: flex;
+    justify-content: center; */
+}
+
+.wrapper2 {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    /* width: 100%; */
+    background-color: orange;
+}
+
 
 .homePage {
     background-color: red;
@@ -63,19 +101,30 @@ button:hover{
 }
 
 .menuPage {
-    /* width: 100%; */
-    /* height: 100%; */
+    /* width: 100%;
+    height: 100%; */
     background-color: lightgray;
+
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     padding: 1rem 2rem  1rem 2rem  ;
     max-width: 55rem;
+    /* margin: 10px 30px 10px 30px; */
+
+    /* justify-content: center; */
+    /* align-self: center;
+    align-content: center; */
+    /* align-items: flex-start; */
+        /* height: 100%; */
+        /* flex-grow: 1; */
+    /* overflow: auto; */
+
 }
 
 .contactPage {
-    /* width: 100vw; */
-    /* height: 100vh; */
+    /* width: 100vw;
+    height: 100vh; */
     background-color: orange;
     display: flex;
     flex-direction: column;
